--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.1.2",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "^0.0.5",
@@ -56,6 +57,7 @@
     "react-styleguidist": "^6.0.10",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.5"
   }
 }
