--- a/package.json
+++ b/package.json
@@ -21,14 +21,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.16.2",
-    "lodash": "^4.17.4",
     "material-ui": "0.19.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-md": "^1.0.15",
-    "react-sortable-hoc": "^0.6.3",
-    "react-virtualized": "^9.7.6"
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
