--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-styleguidist": "^6.0.10",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9"
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5"
   }
 }
