--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "styleguide:build": "styleguidist build",
     "start": "yarn run styleguide",
     "build": "yarn run styleguide:build",
+    "build:modules": "babel ./src -d ./lib",
     "release": "yarn version --new-version patch",
     "dev": "nodemon --watch src --exec 'yarn start'",
     "preversion": "yarn test",
