easy type for login button

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "echo ''",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
-    "start": "yarn run styleguide",
+    "start": "npm run styleguide",
     "build": "babel ./src -d ./lib",
     "copy:scss": "cp -r src/styles/* lib/scss/",
     "release": "yarn version --new-version patch",
     "dev": "nodemon --watch src --exec 'yarn start'",
-    "prerelease": "yarn build && yarn copy:scss",
-    "preversion": "yarn test",
+    "prerelease": "npm run build && npm run copy:scss",
+    "preversion": "npm run test",
     "version": "git add --all",
     "postversion": "git push"
   },
